--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -4,4 +4,8 @@ server {
         proxy_set_header Host $http_host;
         proxy_pass http://backend:8000/api/;
     }
+
+    location /static {
+        alias /staticfiles;
+    }
 }
