--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.3"
 
 volumes:
   pg_data:
+  static:
 
 services:
   db:
@@ -9,6 +10,7 @@ services:
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
+      - static:/staticfiles
   backend:
     build:
       context: ../hammer_referrals
@@ -20,4 +22,6 @@ services:
       dockerfile: Dockerfile
     image: nginx:1.19.3
     ports:
-      - "80:80"
+      - "9000:80"
+    volumes:
+      - static:/staticfiles
